오타에 주의하자

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<{KAKAOMAP_API}>&libraries=services,clusterer"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<{VITE_KAKAOMAP_API}>&libraries=services,clusterer"
     ></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
